# tutorial-generic

./: pyproject.toml  readme.md
sample1/: before.py  prophet.py
