[tool.poetry]
name = "tutorial-generic"
version = "0.1.0"
description = "A tutorial of Generic for programming in python with types"
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
prophet = "^1.0.1"
pandas = "^1.4.1"
mdweek = "^1.2.3"
sklearn = "^0.0"
statsmodels = "^0.13.2"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
